fixed overflowing problem omgg thxx squaer :D

--- a/style.css
+++ b/style.css
@@ -64,8 +64,6 @@ p {
 
 body {
  padding: 0px;
- width: 100%;
- height: 100%;
  font-family: "helvetica neue", sans-serif;
  text-align: center;
  color: var(--yellow);
